fix network spacing

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -89,6 +89,7 @@ window#waybar {
 }
 
 #network {
+    padding-right: 15px;
     color: #a6e3a1;
 }
 
